Finished Workshop B report...i. guess....

--- a/WorkshopB/Rapport/main.tex
+++ b/WorkshopB/Rapport/main.tex
@@ -7,8 +7,10 @@
 \usepackage[english]{babel}
 \usepackage{graphicx}
 \usepackage{float}
-\usepackage[maring=0.5in]{geometry}
+\usepackage[margin=0.5in]{geometry}
 
+\usepackage{caption}
+\usepackage{subcaption}
 \graphicspath{{./fig/}}
 
 \title{MF2007 - Workshop B}
@@ -29,5 +31,6 @@ Andreas Fr\"oderberg \\ 880730-7577
   \input{part2}
 \section*{Task 3: Robustness to parameter uncertainty and sensor noise}
   \input{part3}
+  \input{part3level2}
 
 \end{document}
