--- a/WorkshopB/Rapport/part2.tex
+++ b/WorkshopB/Rapport/part2.tex
@@ -47,5 +47,17 @@ A close-up of the sampling time problem is shown in Figure \ref{fig:task2_closeu
 \end{figure}
 
 
+\subsection*{Level 2}
+Some modifications to the code had to be made to make it work in dSPACE but the same code is used for the plot in Figure \ref{fig:task2_traj_l2}. The performance of the trajectory planner in dSPACE worked excellent. It behaved almost exactly like in Simulink on the Dc motor model. 
+
+
+\begin{figure}[H]
+	\begin{center}
+	
+		\includegraphics[width=\linewidth]{task2_traj_l2.png}
+		\caption{Comparison on the performance of the trajectory planner}
+		\label{fig:task2_traj_l2}
+	\end{center}
+\end{figure}
 
 %\end{document}
