--- a/WorkshopB/Rapport/part3.tex
+++ b/WorkshopB/Rapport/part3.tex
@@ -32,4 +32,4 @@ results in figure \ref{fig:sens31fast} is obtained.
 From the plots we can see that there is a possibility to adjust the
 system to be less sensitive to noise and disturbances from either the
 sensor or the plant. This means that if there is a good plant model,
-there is less sensitivity to sensor noise.
+there is less sensitivity to sensor noise and vice versa.
