--- a/WorkshopB/Rapport/part3level2.tex
+++ b/WorkshopB/Rapport/part3level2.tex
@@ -1,8 +1,7 @@
 \subsection*{Level 2}
 The velocity controller from Exercise 3 was used as controller.
-Following the first part of the task the chosen values can be seen in
-Table~\ref{tbl:table2}.
-
+By following the steps of the first part of the task was the values in
+Table~\ref{tbl:table2} chosen. 
 \begin{table}[H]
   \centering
     \caption{Values for the velocity controller}
@@ -15,11 +14,9 @@ Table~\ref{tbl:table2}.
     \end{tabular}
     \label{tbl:table2}
 \end{table}
-
 \subsubsection*{1}
 Figure \ref{fig:task3_1_1000} shows the step responses for two different
 values of $A_o$. A force of 5000 N is applied at the time 0.03 seconds.
-
 \begin{figure}[H]
     \centering
     \begin{subfigure}[b]{0.45\textwidth}
@@ -70,7 +67,7 @@ frequency of 1700 rad/s.
 Figure \ref{fig:task3_3_bode} shows the complementary sensitivity
 function for the two different $A_o$ values. The magnitude when the
 frequency is 1700 rad/s is shown which shows that a lower $A_o$ value
-dampens the noise more. It was hard to find a frequency were the noise
+dampens the noise better. It was hard to find a frequency were the noise
 dampening were very noticeable but the dampening can be seen in Figure
 \ref{fig:task3_3_1000_freq_1700} were the noise affects the system less
 when $A_o$=1000 compared to $A_o$=2000.
